updates to positions, stats, etc

--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
               </div>
               <div class="tx2">2022 &mdash; present</div>
               <div>
-                <div>Founder & CEO.</div>
+                <div>
+                  Founder & CEO. Designed all code systems for the survival game <a href="https://vein.gg/">VEIN</a>; wrote all code;
+                  implemented web apps, <a href="https://discord.com/">Discord</a> bots, and tooling.
+                </div>
                 <div class="employment-tags">
                   <div>C++</div>
+                  <div>Unreal Engine</div>
                   <div>Node</div>
                   <div>React</div>
                   <div>PostgreSQL</div>
@@ -142,9 +146,10 @@
               </div>
               <div class="tx2">2023 &mdash; 2024</div>
               <div>
-                <div>Contract programmer.</div>
+                <div>Contract programmer. Implemented and upgraded core gameplay systems for a yet-unannounced game.</div>
                 <div class="employment-tags">
                   <div>C++</div>
+                  <div>Unreal Engine</div>
                 </div>
               </div>
             </div>
@@ -152,7 +157,7 @@
               <div><a href="https://mercury.com/">Mercury</a></div>
               <div class="tx2">2022 &mdash; 2023</div>
               <div>
-                <div>Senior frontend engineer.</div>
+                <div>Senior frontend engineer. Worked on various UI elements, form flows, and landing page elements.</div>
                 <div class="employment-tags">
                   <div>React</div>
                   <div>ThreeJS</div>
@@ -165,7 +170,10 @@
               </div>
               <div class="tx2">2022</div>
               <div>
-                <div>Senior fullstack engineer.</div>
+                <div>
+                  Senior fullstack engineer. Worked on some legacy code porting; worked on some confidential finance features of the
+                  application.
+                </div>
                 <div class="employment-tags">
                   <div>React</div>
                   <div>Ruby</div>
@@ -179,7 +187,10 @@
               </div>
               <div class="tx2">2021 &mdash; 2022</div>
               <div>
-                <div>Staff fullstack engineer.</div>
+                <div>
+                  Staff fullstack engineer. Wrote multiple mobile apps with Flutter; wrote the WebRTC Node/Go backend system for video
+                  streams.
+                </div>
                 <div class="employment-tags">
                   <div>React Native</div>
                   <div>Flutter</div>
@@ -197,9 +208,10 @@
               </div>
               <div class="tx2">2021</div>
               <div>
-                <div>Contract programmer.</div>
+                <div>Contract programmer. Implemented gameplay systems for an as-of-yet unannounced game.</div>
                 <div class="employment-tags">
                   <div>C++</div>
+                  <div>Unreal Engine</div>
                 </div>
               </div>
             </div>
@@ -209,9 +221,13 @@
               </div>
               <div class="tx2">2020 &mdash; 2021</div>
               <div>
-                <div>Lead programmer.</div>
+                <div>
+                  Lead programmer. Implemented web app that sold and distributed game keys; worked on multiple core gameplay systems; and
+                  mentored junior programmers.
+                </div>
                 <div class="employment-tags">
                   <div>C++</div>
+                  <div>Unreal Engine</div>
                   <div>React</div>
                   <div>Node</div>
                   <div>PostgreSQL</div>
@@ -225,7 +241,10 @@
               </div>
               <div class="tx2">2015 &mdash; 2020</div>
               <div>
-                <div>Senior fullstack developer.</div>
+                <div>
+                  Senior fullstack developer. Project lead on tens of different projects spanning a wide variety of technologies. Mentored
+                  junior programmers.
+                </div>
                 <div class="employment-tags">
                   <div>React</div>
                   <div>Angular</div>
@@ -244,10 +263,14 @@
               </div>
               <div class="tx2">2013 &mdash; 2015</div>
               <div>
-                <div>Tools programmer.</div>
+                <div>
+                  Tools programmer. Modernized UI; implemented tools for staff to interface with stored procedures and other legacy ISP
+                  management systems.
+                </div>
                 <div class="employment-tags">
                   <div>PHP</div>
                   <div>MySQL</div>
+                  <div>JavaScript</div>
                 </div>
               </div>
             </div>
@@ -257,7 +280,7 @@
           <h2 id="projects">Ongoing Projects</h2>
           <ul>
             <li>
-              <a href="https://vein.gg/">VEIN</a>, multiplayer open-world survival game. <span class="gr">68,000</span> Steam wishlist
+              <a href="https://vein.gg/">VEIN</a>, multiplayer open-world survival game. <span class="gr">70,000</span> Steam wishlist
               preorders and counting. <span class="ye">C++, Node</span>.
             </li>
             <li>
@@ -333,8 +356,9 @@
         </section>
         <section aria-label="Website Source Code">
           <p>
-            This site is written in plain HTML and CSS with optional JavaScript. You can
-            <a href="https://github.com/disseminate/kylewindsor.io">find the source here</a>.
+            This site is written in plain HTML and CSS with optional JavaScript implemented with TypeScript. You can
+            <a href="https://github.com/disseminate/kylewindsor.io">find the source here</a>. It is written with 'simple' technology in
+            order to optimize load-times.
           </p>
         </section>
       </main>
