port to react, and move data out

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <title>Kyle Windsor</title>
-    <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,351 +17,7 @@
     <base target="_blank" />
   </head>
   <body>
-    <div id="background">
-      <canvas id="background-canvas"></canvas>
-    </div>
-    <div id="container">
-      <main>
-        <header><h1>Kyle Windsor</h1></header>
-        <hr />
-        <section aria-labelledby="about">
-          <h2 id="about">About</h2>
-          <p>I'm a senior full-stack software engineer.</p>
-          <p>
-            I'm proficient in various <span class="ye">web technologies</span> and <span class="ye">C++</span>. I've been programming since
-            I was <span class="gr">12</span>.
-          </p>
-          <p>
-            I've been programming professionally for
-            <span id="years" class="gr">many</span> years.
-          </p>
-          <div class="technologies-table">
-            <div class="technologies-table-column">
-              <h3>Front-end</h3>
-              <ul>
-                <li>
-                  TypeScript
-                  <ul>
-                    <li>JavaScript</li>
-                  </ul>
-                </li>
-                <li>
-                  SASS
-                  <ul>
-                    <li>CSS</li>
-                  </ul>
-                </li>
-                <li>
-                  React
-                  <ul>
-                    <li>JSX</li>
-                    <li>TSX</li>
-                  </ul>
-                </li>
-                <li>GraphQL</li>
-                <li>HTML5</li>
-                <li>Websockets, WebRTC, MediaStreams</li>
-                <li>Electron</li>
-                <li>Webpack, Parcel</li>
-                <li>React Native</li>
-                <li>Flutter</li>
-                <li>Angular</li>
-              </ul>
-            </div>
-            <div class="technologies-table-column">
-              <h3>Back-end</h3>
-              <ul>
-                <li>Node</li>
-                <li>Golang</li>
-                <li>
-                  Databases
-                  <ul>
-                    <li>PostgreSQL</li>
-                    <li>MySQL</li>
-                    <li>SQLite</li>
-                    <li>Redis</li>
-                  </ul>
-                </li>
-                <li>
-                  Linux
-                  <ul>
-                    <li>Arch</li>
-                    <li>Debian (Ubuntu, Amazon)</li>
-                  </ul>
-                </li>
-                <li>Websockets, WebRTC</li>
-                <li>GraphQL</li>
-                <li>
-                  DevOps
-                  <ul>
-                    <li>AWS</li>
-                    <li>GCP</li>
-                    <li>DigitalOcean</li>
-                  </ul>
-                </li>
-                <li>Firebase</li>
-              </ul>
-            </div>
-            <div class="technologies-table-column">
-              <h3>Games</h3>
-              <ul>
-                <li>C++11 through C++22</li>
-                <li>Unreal Engine 5, Unreal Engine 4</li>
-                <li>Source Engine</li>
-                <li>Lua</li>
-                <li>C</li>
-                <li>Visual Studio, Rider</li>
-              </ul>
-            </div>
-          </div>
-        </section>
-        <section aria-labelledby="work-experience">
-          <h2 id="work-experience">Work Experience</h2>
-          <table class="employment-table">
-            <div class="employment-entry">
-              <div>
-                <a href="https://ramjetstudios.com/">Ramjet Studios</a>
-              </div>
-              <div class="tx2">2022 &mdash; present</div>
-              <div>
-                <div>
-                  Founder & CEO. Designed all code systems for the survival game <a href="https://vein.gg/">VEIN</a>; wrote all code;
-                  implemented web apps, <a href="https://discord.com/">Discord</a> bots, and tooling.
-                </div>
-                <div class="employment-tags">
-                  <div>C++</div>
-                  <div>Unreal Engine</div>
-                  <div>Node</div>
-                  <div>React</div>
-                  <div>PostgreSQL</div>
-                  <div>SQLite</div>
-                  <div>GraphQL</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://alderongames.com/">Alderon Games</a>
-              </div>
-              <div class="tx2">2023 &mdash; 2024</div>
-              <div>
-                <div>Contract programmer. Implemented and upgraded core gameplay systems for a yet-unannounced game.</div>
-                <div class="employment-tags">
-                  <div>C++</div>
-                  <div>Unreal Engine</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div><a href="https://mercury.com/">Mercury</a></div>
-              <div class="tx2">2022 &mdash; 2023</div>
-              <div>
-                <div>Senior frontend engineer. Worked on various UI elements, form flows, and landing page elements.</div>
-                <div class="employment-tags">
-                  <div>React</div>
-                  <div>ThreeJS</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://www.angellist.com/">AngelList</a>
-              </div>
-              <div class="tx2">2022</div>
-              <div>
-                <div>
-                  Senior fullstack engineer. Worked on some legacy code porting; worked on some confidential finance features of the
-                  application.
-                </div>
-                <div class="employment-tags">
-                  <div>React</div>
-                  <div>Ruby</div>
-                  <div>PostgreSQL</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://www.prepared911.com/">Prepared</a>
-              </div>
-              <div class="tx2">2021 &mdash; 2022</div>
-              <div>
-                <div>
-                  Staff fullstack engineer. Wrote multiple mobile apps with Flutter; wrote the WebRTC Node/Go backend system for video
-                  streams.
-                </div>
-                <div class="employment-tags">
-                  <div>React Native</div>
-                  <div>Flutter</div>
-                  <div>Node</div>
-                  <div>Go</div>
-                  <div>Websockets</div>
-                  <div>WebRTC</div>
-                  <div>GraphQL</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://www.crowbarcollective.com/">Crowbar Collective</a>
-              </div>
-              <div class="tx2">2021</div>
-              <div>
-                <div>Contract programmer. Implemented gameplay systems for an as-of-yet unannounced game.</div>
-                <div class="employment-tags">
-                  <div>C++</div>
-                  <div>Unreal Engine</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://www.qi.games/">QI Games</a>
-              </div>
-              <div class="tx2">2020 &mdash; 2021</div>
-              <div>
-                <div>
-                  Lead programmer. Implemented web app that sold and distributed game keys; worked on multiple core gameplay systems; and
-                  mentored junior programmers.
-                </div>
-                <div class="employment-tags">
-                  <div>C++</div>
-                  <div>Unreal Engine</div>
-                  <div>React</div>
-                  <div>Node</div>
-                  <div>PostgreSQL</div>
-                  <div>MySQL</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://devlift.com/">Devlift Media</a>
-              </div>
-              <div class="tx2">2015 &mdash; 2020</div>
-              <div>
-                <div>
-                  Senior fullstack developer. Project lead on tens of different projects spanning a wide variety of technologies. Mentored
-                  junior programmers.
-                </div>
-                <div class="employment-tags">
-                  <div>React</div>
-                  <div>Angular</div>
-                  <div>Ionic</div>
-                  <div>React Native</div>
-                  <div>Node</div>
-                  <div>PostgreSQL</div>
-                  <div>MySQL</div>
-                  <div>MongoDB</div>
-                </div>
-              </div>
-            </div>
-            <div class="employment-entry">
-              <div>
-                <a href="https://isp.ca/">ISP Canada</a>
-              </div>
-              <div class="tx2">2013 &mdash; 2015</div>
-              <div>
-                <div>
-                  Tools programmer. Modernized UI; implemented tools for staff to interface with stored procedures and other legacy ISP
-                  management systems.
-                </div>
-                <div class="employment-tags">
-                  <div>PHP</div>
-                  <div>MySQL</div>
-                  <div>JavaScript</div>
-                </div>
-              </div>
-            </div>
-          </table>
-        </section>
-        <section aria-labelledby="projects">
-          <h2 id="projects">Ongoing Projects</h2>
-          <ul>
-            <li>
-              <a href="https://vein.gg/">VEIN</a>, multiplayer open-world survival game. <span class="gr">70,000</span> Steam wishlist
-              preorders and counting. <span class="ye">C++, Node</span>.
-            </li>
-            <li>
-              <a href="https://pomelolanguage.com/">Pomelo</a>, language-learning platform designed as an
-              <a href="https://apps.ankiweb.net/">Anki</a>
-              replacement.
-              <span class="ye">React, Node, Typescript, PostgreSQL</span>.
-            </li>
-          </ul>
-          <p>
-            There are too many projects I've worked on prior to these to list. If you're curious please get in contact. You can also take a
-            look at my
-            <a href="https://github.com/disseminate">GitHub</a>
-            but most of my projects are private.
-          </p>
-        </section>
-        <section aria-labelledby="education">
-          <h2 id="education">Education</h2>
-          <p>
-            I attended
-            <a href="https://uwo.ca/">the University of Western Ontario</a>
-            for <span class="gr">7</span> years. I earned my BSc in <span class="ye">computer science</span> and
-            <span class="ye">astrophysics</span>, followed by my MSc in <span class="ye">computer science</span>. I had a brief period of
-            <span class="ye">astrophysics</span> study at the <a href="https://www.hku.hk/">University of Hong Kong</a>.
-          </p>
-          <p>
-            You can read
-            <a href="/bachelor-thesis.pdf">my bachelor's thesis here</a>. My
-            <a href="https://ir.lib.uwo.ca/etd/6844/">master's thesis is available here</a>.
-          </p>
-        </section>
-        <section aria-labelledby="personal">
-          <h2 id="personal">Personal</h2>
-          <p>
-            My hobbies include language learning (previously studied Chinese, Cantonese, Spanish and now focusing on Thai) and collecting
-            geodes.
-          </p>
-          <p>I watch a ton of movies, especially dramas, thrillers, and sci-fi, and maintain a somewhat large personal collection.</p>
-          <p>
-            My favorite music genres include electronic (drum and bass, Y2K, industrial, house, trip hop, bass), folk, and progressive rock.
-            You can
-            <a href="https://open.spotify.com/user/22ayc3ifl5r2rm2qbn232yqzi?si=2a21a8e1568c4a55">view my Spotify profile here</a>.
-          </p>
-          <p>
-            My favorite author is
-            <a href="https://www.gregegan.net/">Greg Egan</a>. You should buy some of his anthologies if you're at all interested in hard
-            sci-fi.
-          </p>
-          <p>
-            My favorite games include
-            <a href="https://en.wikipedia.org/wiki/Subnautica">Subnautica</a>, the
-            <a href="https://en.wikipedia.org/wiki/Half-Life_(series)">Half-Life</a>
-            series,
-            <a href="https://en.wikipedia.org/wiki/Left_4_Dead_(franchise)">Left 4 Dead 1 &amp; 2</a>, the
-            <a href="https://en.wikipedia.org/wiki/Mass_Effect">Mass Effect</a>
-            series,
-            <a href="https://en.wikipedia.org/wiki/Fallout:_New_Vegas">Fallout: New Vegas</a>, and
-            <a href="https://en.wikipedia.org/wiki/Project_Zomboid">Project Zomboid</a>. Generally I enjoy first-person shooters, RPGs, and
-            simulation games. I also play a lot of games in VR.
-          </p>
-          <p>
-            My
-            <a href="https://en.wikipedia.org/wiki/Myers%E2%80%93Briggs_Type_Indicator">MBTI</a>
-            is ENTJ.
-          </p>
-        </section>
-        <section aria-labelledby="contact">
-          <h2 id="contact">Contact</h2>
-          <p>
-            Send an email to
-            <a href="mailto:kyle@kylewindsor.io">kyle@kylewindsor.io</a>.
-          </p>
-        </section>
-        <section aria-label="Website Source Code">
-          <p>
-            This site is written in plain HTML and CSS with optional JavaScript implemented with TypeScript. You can
-            <a href="https://github.com/disseminate/kylewindsor.io">find the source here</a>. It is written with 'simple' technology in
-            order to optimize load-times.
-          </p>
-        </section>
-      </main>
-    </div>
-    <script type="module" src="src/index.ts" defer></script>
+    <div id="app"></div>
+    <script type="module" src="src/index.tsx" defer></script>
   </body>
 </html>
